# grainlify

.github/workflows/: contracts-ci.yml  contracts.yml
backend/: .gitignore  .railwayignore  API_ENDPOINTS.md  DOCKER_POSTGRES_SETUP.md  ENV_REDIRECT_URLS.md  FIX_INSTALLATION_ACCESS.md  GITHUB_APP_CALLBACK_DEBUG.md  GITHUB_APP_CALLBACK_FIX.md  Makefile  PRIVATE_KEY_SETUP.md  QUICK_DB_SETUP.md  QUICK_START.md  README.md  SYNC_ISSUES_PR_TROUBLESHOOTING.md  VERIFY_CALLBACK_URL.md  WEBHOOK_SECRET_EXPLAINED.md
backend/migrations/: 000001_init.up.sql  000002_projects_verification_and_webhooks.up.sql  000003_github_issue_pr_sync.up.sql  000004_github_login_states.up.sql  000005_ecosystems.up.sql  000006_projects_ecosystem_id.up.sql  000007_remove_chain_from_projects.up.sql  000008_issues_assignees_labels_comments.up.sql  000009_issues_comments.up.sql  000010_projects_metadata.up.sql  000011_users_kyc.up.sql  000012_add_not_started_kyc_status.down.sql  000012_add_not_started_kyc_status.up.sql  000013_add_in_review_kyc_status.down.sql  000013_add_in_review_kyc_status.up.sql  000014_user_contribution_indexes.down.sql  000014_user_contribution_indexes.up.sql  000015_contribution_date_indexes.down.sql  000015_contribution_date_indexes.up.sql  000016_add_avatar_url_to_github_accounts.down.sql  (+6 more)
contracts/program-escrow/: Cargo.toml  README.md
contracts/program-escrow/src/: lib.rs  test.rs  test_circuit_breaker_audit.rs  test_claim_period_expiry_cancellation.rs  test_full_lifecycle.rs  test_lifecycle.rs  test_pause.rs  threshold_monitor.rs
docs/: index.md
frontend/: .gitignore
(+52 files in other folders)
