[package]
name = "program-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
soroban-sdk = "22.0.0"
grainlify-core = { path = "../grainlify-core" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
